feat: 添加lint,prettier,githook配置

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
+@import url(//at.alicdn.com/t/c/font_3722597_zlum9p0mowt.css);
+
 h1 {
-    color: white;
-    background-color: black;
-  }
+  color: white;
+  background-color: black;
+}
